# tinytensor

./: README.md  pyproject.toml
examples/: gradient.py
src/neural_lib/: layers.py  test_neural.py
src/tinytensor/: core.py  data.py  layers.py  optim.py  tensor.py
tests/: test_grads.py  test_params.py  test_tensor.py
tiny_neural_engine/: README.md  pyproject.toml
tiny_neural_engine/src/tiny_neural_engine/: layers.py  optim.py
tiny_neural_engine/tests/: test_grads.py  test_neural.py  test_params.py
