[build-system]
requires = [
    "setuptools >= 77.0.3",
    "numpy >= 2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "tinytensor"
version = "0.1.0"
authors = [
  { name="Adam Johansson", email="adam.johansson.144@gmail.com" },
]
description = "A small library for CPU-based automatic differentiation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/adjohansson/tinytensor"
Issues = "https://github.com/adjohansson/tinytensor/issues"
