[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[project]
name = "tinytensor"
version = "0.2.0"
authors = [
  { name="Adam Johansson", email="adam.johansson.144@gmail.com" },
]
description = "A small library for CPU-based automatic differentiation."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>2.0.0"
]

[project.urls]
Homepage = "https://github.com/adjohansson/tinytensor"
Issues = "https://github.com/adjohansson/tinytensor/issues"

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "tinytensor",
    "torch>=2.12.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
tinytensor = { workspace = true, editable = true }

